[package]
name = "reconstruction"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[dependencies]
soundsym = { path = "/Users/acsmith/workspaces/music/rust/soundsym" }
vox_box = "0.2.3"
portaudio = "0.7.0"
hound = "2.0"
bounded-spsc-queue = "0.1.2"
rusty-machine = "*"
crossbeam = "0.2"
conrod = "0.47"
find_folder = "*"
pistoncore-event_loop = "*"
