[package]
name = "reconstruction"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[dependencies]
soundsym = { path = "/Users/acsmith/workspaces/music/rust/soundsym" }
vox_box = "0.2.3"
portaudio = "0.7.0"
hound = "2.0"
bounded-spsc-queue = "0.1.2"
rusty-machine = "0.5"
crossbeam = "0.2"
conrod = { version = "0.51", features = ["piston"] }
find_folder = "0.3"
piston_window = "0.63"
